# leaf_new

./: .gitignore  Cargo.toml  Makefile  README.md  README.zh.md
dependencies/: Cargo.toml
leaf/: Cargo.toml  build.rs  config.conf  text.txt
leaf-android/: .gitignore  Cargo.toml  armv7.sh  armv8.sh  build.ps1  build.sh  test  x86.sh  x86_64.sh
leaf-android/src/: lib.rs
leaf-bin/: Cargo.toml
leaf-ffi/: Cargo.toml
leaf-ffi/src/: lib.rs
leaf-plugins/shadowsocks/src/: lib.rs
leaf/src/: lib.rs  session.rs  util.rs
leaf/src/app/: dispatcher.rs  logger.rs  nat_manager.rs
leaf/src/app/inbound/: manager.rs
leaf/src/app/outbound/: manager.rs
leaf/src/common/: circular_queue.rs  cmd_linux.rs  crypto.rs  error_queue.rs  mod.rs  sync_valid_routes.rs
leaf/src/config/: external_rule.rs
leaf/src/config/conf/: config.rs
leaf/src/config/internal/: config.proto
leaf/src/mobile/: logger.rs  wrapper.h
leaf/src/proto/: mod.rs
leaf/src/proto/client_config/: client_config.proto  client_config.rs  mod.rs
leaf/src/proto/server_config/: mod.rs  server_config.proto  server_config.rs
leaf/src/proxy/: mod.rs
leaf/src/proxy/failover/: tcp.rs
leaf/src/proxy/shadowsocks/: crypto.rs  mod.rs  shadow.rs  ss_router.rs
leaf/src/proxy/static/: tcp.rs
leaf/src/proxy/tryall/: tcp.rs
leaf/src/proxy/tun/: inbound.rs
leaf/tests/: config.conf  test_demo.rs  test_ss_tcp.rs  test_ws_trojan.rs
third/: Cargo.toml  build.rs  wrapper.h
third/src/: lib.rs
third/src/zj_gm/: api.h  bindings.rs  mod.rs  sm.rs  sm4_test.c  sm_compat.rs
(+6 files in other folders)
