[package]
name = "third"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = { version = "0.4", features = ["std"] }
hex = {version = "0.3"}
foreign-types = "0.3"
libc = "0.2"
openssl = { version = "0.10.55", features = ["vendored"] }
openssl-sys = "0.9"


[dev-dependencies]
hex = {version = "0.3"}

#libdlt-sys = "0.1.1"
[build-dependencies]
bindgen = "0.59"
